--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/geolocation": "^3.4.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.75.5"
+    "react-native": "0.75.5",
+    "react-native-background-geolocation": "^4.18.6",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-location": "^2.5.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-permissions": "^5.2.6",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
